--- a/paper/variables.less
+++ b/paper/variables.less
@@ -14,11 +14,11 @@
 @gray-light:             #bbb;
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:         #2196F3;
-@brand-success:         #4CAF50;
-@brand-info:            #9C27B0;
-@brand-warning:         #ff9800;
-@brand-danger:          #e51c23;
+@brand-primary:         #1e7098;
+@brand-success:         #0ea862;
+@brand-info:            #7772b4;
+@brand-warning:         #f19223;
+@brand-danger:          #d9534f;
 
 
 //== Scaffolding
@@ -48,15 +48,15 @@
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
 
-@font-size-base:          13px;
+@font-size-base:          14px;
 @font-size-large:         ceil((@font-size-base * 1.25)); // ~18px
 @font-size-small:         ceil((@font-size-base * 0.85)); // ~12px
 
-@font-size-h1:            56px;
-@font-size-h2:            45px;
-@font-size-h3:            34px;
-@font-size-h4:            24px;
-@font-size-h5:            20px;
+@font-size-h1:            40px;
+@font-size-h2:            33px;
+@font-size-h3:            26px;
+@font-size-h4:            20px;
+@font-size-h5:            16px;
 @font-size-h6:            14px;
 
 //** Unit-less `line-height` for use in components like buttons.
@@ -512,7 +512,7 @@
 //** Tooltip text color
 @tooltip-color:               #fff;
 //** Tooltip background color
-@tooltip-bg:                  #727272;
+@tooltip-bg:                  #171717;
 @tooltip-opacity:             .9;
 
 //** Tooltip arrow width
