--- a/paper/bootstrap.css
+++ b/paper/bootstrap.css
@@ -6811,9 +6811,9 @@ input[type=number],
 [type=email].form-control,
 [type=tel].form-control,
 [contenteditable].form-control {
-  padding: 0;
-  border: none;
-  border-radius: 0;
+  padding: 5px;
+  border: 1px solid #dddddd;
+  border-radius: .2em;
   -webkit-appearance: none;
   -webkit-box-shadow: inset 0 -1px 0 #dddddd;
   box-shadow: inset 0 -1px 0 #dddddd;
