--- a/paper/bootswatch.less
+++ b/paper/bootswatch.less
@@ -124,9 +124,9 @@ input[type=number],
 [type=email].form-control,
 [type=tel].form-control,
 [contenteditable].form-control {
-  padding: 0;
-  border: none;
-  border-radius: 0;
+  padding: 5px;
+  border: 1px solid #dddddd;
+  border-radius: .2em;
   -webkit-appearance: none;
   .box-shadow(inset 0 -1px 0 #ddd);
   font-size: 16px;
