--- a/paper/bootstrap.css
+++ b/paper/bootstrap.css
@@ -6892,13 +6892,12 @@ input[type=number].input-lg,
 }
 select,
 select.form-control {
-  border: 0;
-  border-radius: 0;
+  padding: 5px;
+  border: 1px solid #dddddd;
+  border-radius: .2em;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  padding-left: 0;
-  padding-right: 0\9;
   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAMAAACelLz8AAAAJ1BMVEVmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmaP/QSjAAAADHRSTlMAAgMJC0uWpKa6wMxMdjkoAAAANUlEQVR4AeXJyQEAERAAsNl7Hf3X6xt0QL6JpZWq30pdvdadme+0PMdzvHm8YThHcT1H7K0BtOMDniZhWOgAAAAASUVORK5CYII=);
   -webkit-background-size: 13px 13px;
           background-size: 13px;
