--- a/paper/bootswatch.less
+++ b/paper/bootswatch.less
@@ -154,13 +154,12 @@ input[type=number],
 
 select,
 select.form-control {
-  border: 0;
-  border-radius: 0;
+  padding: 5px;
+  border: 1px solid #dddddd;
+  border-radius: .2em;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  padding-left: 0;
-  padding-right: 0\9; // remove padding for < ie9 since default arrow can't be removed
   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABoAAAAaCAMAAACelLz8AAAAJ1BMVEVmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmZmaP/QSjAAAADHRSTlMAAgMJC0uWpKa6wMxMdjkoAAAANUlEQVR4AeXJyQEAERAAsNl7Hf3X6xt0QL6JpZWq30pdvdadme+0PMdzvHm8YThHcT1H7K0BtOMDniZhWOgAAAAASUVORK5CYII=);
   background-size: 13px;
   background-repeat: no-repeat;
