--- a/paper/bootswatch.less
+++ b/paper/bootswatch.less
@@ -326,7 +326,7 @@ select.form-control {
     &:last-child {
         &:before {
           display: block;
-          content: 'div::before';
+          content: '';
           position: absolute;
           width: 100%;
           height: 100%;
